deployment.yml
---
## Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: dev-ns
---
## Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-buildpacks-deployment
  namespace: dev-ns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: buildpacks
  template:
    metadata:
      labels:
        app: buildpacks
    spec:
      containers:
      - name: dev-buildpacks-container
        image: repo12.azurecr.io/buildpacks-image:v1.0
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "500m"
            memory: "500Mi"       # fixed unit
          limits:
            cpu: "700m"
            memory: "1Gi"
---
## Service
apiVersion: v1
kind: Service
metadata:
  name: dev-buildpacks-service
  namespace: dev-ns
spec:
  selector:
    app: buildpacks
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
---
## Ingress for AGIC
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-buildpacks-ingress
  namespace: dev-ns
  annotations:
    kubernetes.io/ingress.class: azure-application-gateway
spec:
  ingressClassName: azure-application-gateway
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dev-buildpacks-service
            port:
              number: 80
